manifests/gitops/base/03-camelk-apps/03-ossm/auth-req.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: debit-dev-auth
spec:
  selector:
    matchLabels:
      camel.apache.org/integration: debitservice
  jwtRules:
  - issuer: https://keycloak-sso.apps.sno.myocp.net/auth/realms/apps
    jwksUri: https://keycloak-sso.apps.sno.myocp.net/auth/realms/apps/protocol/openid-connect/certs
    forwardOriginalToken: true
