manifests/gitops/base/03-camelk-apps/03-ossm/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transactionservice
spec:
  hosts:
  - "*"
  gateways:
  - camelk-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /camelk
    rewrite:
      uri: "/"
    route:
    - destination:
        host: transactionservice
        port:
          number: 80
