manifests/gitops/base/03-camelk-apps/03-ossm/auth-debit-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: debit-camelk
spec:
  action: ALLOW
  selector:
    matchLabels:
      camel.apache.org/integration: debitservice
  rules:
  - to:
    - operation:
        methods: ["GET"]
        paths: ["/debit"]
    when:
    - key: request.auth.claims[realm_access][roles]
      values: ["debit-user"]
